Upload images: add some QUnit tests.
Most of the basic steps are tested: preview, upload, abort, showing post-upload links. There are just some different cases to fill in later.

jQuery.ajax() usages are replaced with fetch() usages to make it more testable. This required changes to the code related to CSRF tokens and aborting uploads.

--- a/project/lib/templates/lib/admin_tools.html
+++ b/project/lib/templates/lib/admin_tools.html
@@ -34,6 +34,7 @@
     <li><a href="{% url 'js_test_browse_images_actions' %}">Browse Images - Actions</a></li>
     <li><a href="{% url 'js_test_poller' %}">Poller</a></li>
     <li><a href="{% url 'js_test_source_edit' %}">Source - Edit form</a></li>
+    <li><a href="{% url 'js_test_upload_images' %}">Upload Images</a></li>
   </ul>
 {% else %}
   <br>
